add seo category & products
