# app/Http/Resources/CategoryResource.php
@@ -30,6 +30,7 @@ use OpenApi\Attributes as OA;
         ),
         new OA\Property(property: 'products_count', type: 'integer', nullable: true, example: 5),
         new OA\Property(property: 'cover_url', type: 'string', example: 'http://localhost/storage/1/conversions/image-cover.jpg', nullable: true),
+        new OA\Property(property: 'seo', ref: '#/components/schemas/SeoResource', nullable: true),
     ]
 )]
 class CategoryResource extends JsonResource
@@ -52,6 +53,7 @@ class CategoryResource extends JsonResource
             'children' => $this->resolveChildren(),
             'products_count' => $this->when(isset($this->productsCount), $this->productsCount),
             'cover_url' => $this->coverUrl,
+            'seo' => new SeoResource($this->seo),
         ];
     }
 
