# app/Http/Resources/ProductResource.php
@@ -21,6 +21,7 @@ use OpenApi\Attributes as OA;
         new OA\Property(property: 'description', type: 'string', example: 'Описание товара', nullable: true),
         new OA\Property(property: 'attributes', type: 'object', example: ['power' => '24kW']),
         new OA\Property(property: 'cover_url', type: 'string', example: 'http://localhost/storage/1/conversions/image-cover.jpg', nullable: true),
+        new OA\Property(property: 'seo', ref: '#/components/schemas/SeoResource', nullable: true),
     ]
 )]
 class ProductResource extends JsonResource
@@ -41,6 +42,7 @@ class ProductResource extends JsonResource
             'description' => $this->description,
             'attributes' => $this->attributes,
             'cover_url' => $this->coverUrl,
+            'seo' => new SeoResource($this->seo),
         ];
     }
 }
